# meshcore_source

./: .gitignore  Doxyfile  Makefile.am  README.txt  bootstrap.sh  configure.ac
decode/: meshcore_decoder.c
mcframe/: README.txt  configure.ac
mcframe/src/: Makefile  Makefile.am  Makefile.in  ack_gen.c  ack_gen.h  dispatch.c  dispatch.h  grp_txt_decrypt.c  grp_txt_decrypt.h  main.c  mc_companion_dm.c  mc_companion_dm.h  mcframe  onair.c  onair.h  op_0C.c  op_51.c  op_80.c  op_83.c  op_88.c  op_8A.c  op_default.c  ops.h  ptype_ack.c  ptype_advert.c  ptype_default.c  ptype_dispatch.c  ptype_dispatch.h  ptype_grp_txt.c  ptype_path.c  ptype_req.c  ptype_response.c  ptype_trace.c  ptype_txt_msg.c  txt_msg_decrypt.c  txt_msg_decrypt.h  util_channels.c  util_channels.h  util_crypto.c  util_crypto.h  (+6 more)
mcframe/src/crypto/ed25519/: README.vendor_ed25519.md  vendor_ed25519_from_meshcore.sh
mcframe/tools/: README.md  meshcore_decoder_ref.c  meshcore_decoder_struct.c
send_dm_tool/src/: Makefile.am  mc_send_dm.c
tools/: gen_meshcore_keys.sh
