AM_CFLAGS = -Wall -Wextra -Wpedantic -Werror

bin_PROGRAMS = mcframe
mcframe_SOURCES = \
  main.c \
  dispatch.c dispatch.h ops.h \
  op_default.c \
  op_80.c \
  op_83.c \
  op_88.c \
  op_8A.c \
  op_0C.c \
  onair.c onair.h \
  ptype_dispatch.c ptype_dispatch.h \
  ptype_default.c \
  ptype_req.c \
  ptype_response.c \
  ptype_txt_msg.c \
  ptype_ack.c \
  ptype_advert.c \
  ptype_grp_txt.c \
  ptype_path.c \
  grp_txt_decrypt.c grp_txt_decrypt.h \
  util_channels.c util_channels.h \
  util_hex.c util_hex.h
